[package]
name = "bmbp_tool_noteday"
version = "0.1.0"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description="基于EGUI的日志小工具"
license="LICENSE"
homepage="https://github.com/bmbper/bmbp_tool_noteday"
repository="https://github.com/bmbper/bmbp_tool_noteday"
documentation="https://github.com/bmbper/bmbp_tool_noteday"
[profile.release]
strip = true  # 自动从二进制文件去除符号信息.
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
# UI 库
egui = "0.28.1"
eframe = "0.28.1"
egui_extras = { version = "0.28.1", features = ["all_loaders","chrono"] }
image = { version = "0.25", default-features = false }
# 工具类
serde = { version = "1.0.203", features = ["derive"] }
serde_json = {version = "1"}
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
# 数据类
redb = "2.1.1"
lazy_static = "1.5.0"
